bk_ida/gccida/g3/gen_type_die_for_member
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_type_die_for_member/src/dwarf2out.c:10574:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_type_die_for_member/src/dwarf2out.c:10590:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 10121, "gen_type_die_for_member"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_type_die_for_member/src/obj/dwarf2out.o] Error 1
